# edu-projector

./: .gitignore  Dockerfile  README.md
.github/workflows/: docker-pr.yml
hw2/: deployment.yaml  job.yaml  pod.yaml  service.yaml
hw3/: README.md  minio-deployment.yaml
hw3/benchmark-inference/: README.md  benchmark-interference.py
hw3/minio-client/: README.md  pyproject.toml
hw3/minio-client/src/: client.py
hw3/minio-client/tests/: test_client.py
hw3/pandas-benchmark/: README.md  benchmark.py  pyproject.toml
hw3/streaming_dataset/: README.md  pyproject.toml  streaming-datasets.py
hw3/streaming_dataset/data/: train.parquet
hw3/vector-ingest/: README.md  ingest_vectors.py  pyproject.toml
hw4/check_labels/cleanlab/: README.md  check_labels.py  ignore_this_one_check_labels.py  pyproject.toml
hw4/check_labels/deepchecks/: banking_support_500_ukr.csv  check_labels.py  pyproject.toml
hw4/dvc-versioning/: .gitignore  README.md  banking_support_500_ukr.csv  banking_support_500_ukr.csv.dvc
hw4/label-studio/: README.md  label-studio.yaml  labelstudio-docker-run.sh
hw4/synt_ds_gpt/: pyproject.toml  synt_dataset_gptgen.py  synthetic_dataset.csv
