[project]
name = "deepchecks"
version = "0.1.0"
description = "Validate text‐classification labels with Deepchecks"
dependencies = [
  "pandas",
  "deepchecks[nlp]",
  "setuptools",
  "textblob",
  "torch",
  "transformers",
  "anywidget",
  "ipywidgets"
]

[build-system]
requires = ["uv"]
build-backend = "uv"
